# pyisbn

./: .buildinfo  .coveragerc  .editorconfig  .gitignore  .mailmap  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  ISBN.py  MANIFEST.in  Makefile  NEWS  NEWS.rst  README  README.md  README.rst  __pkg_data__.py  alternatives.html  data.json  docutils.css  faq.html  fun.html  genindex.html  index.html  install.html  nose2.cfg  objects.inv  py-modindex.html  pyproject.toml  release.html  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py  sphinx-reading-durations.json  test.py  test_isbns.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  ISSUE_TEMPLATE.rst  dependabot.yml
.github/workflows/: coverage.yml  pytest.yml  release.yml  ruff.yml  spelling.yml  sphinx.yml  zizmor.yml
_modules/: index.html
_modules/pyisbn/: _exceptions.html  _utils.html  func.html  models.html
_sources/: index.rst.txt  release.rst.txt
_sources/api/: _constants.rst.txt  _types.rst.txt  _utils.rst.txt  index.rst.txt  isbn10.rst.txt
api/: _constants.html  _types.html  _utils.html  func.html  index.html  isbn.html  isbn10.html  isbn13.html  sbn.html
doc/: Makefile  alternatives.rst  conf.py  faq.rst  fun.rst  index.rst  install.rst  release.rst  wordlist.txt
doc/api/: func.rst  index.rst  isbn.rst  isbn10.rst  isbn13.rst  sbn.rst  support.rst  utils.rst
extra/: README.pip  _pyisbn  doap.rdf  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  tool.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_6952550647524b31___init___py.html  z_6952550647524b31__constants_py.html  z_6952550647524b31__exceptions_py.html  z_6952550647524b31__types_py.html  z_6952550647524b31__utils_py.html  z_6952550647524b31__version_py.html  z_6952550647524b31_func_py.html  z_6952550647524b31_models_py.html
pyisbn/: __init__.py  _version.py  test_data.py
src/pyisbn/: __init__.py  _constants.py  _exceptions.py  _types.py  _utils.py  _version.py  func.py  models.py
test/: __init__.py  grab_net_sources.py  isbns.py  mock.py
tests/: __init__.py  books.json  data.py  test__utils.py  test_data.py  test_func.py  test_functions.py  test_isbn.py  test_isbn10.py  test_isbn13.py  test_meta.py  test_regressions.py  test_sbn.py
