[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.0,<0.10.0"]

[dependency-groups]
dev = ["mutmut>=3.3,<=4.0", "pytest-html>=4.1,<=5.0", "ruff>=0.14,<=0.15"]
doc = [
    "sphinx-autodoc-typehints>=3.2,<=4.0",
    "sphinx>=8.2,<=9.0",
    "sphinx_rtd_theme>=3.0,<=4.0",
    "sphinxcontrib-spelling>=8.0,<9.0",
]
test = [
    "hypothesis>=6.140,<=7.0",
    "pytest-cov>=7.0,<=8.0",
    "pytest-randomly>=4.0,<=5.0",
    "pytest>=8.4,<=9.0",
]

[project]
name = "pyisbn"
version = "1.3.1"
description = "A module for working with 10- and 13-digit ISBNs"
readme = "README.rst"
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
authors = [{ name = "James Rowe", email = "jnrowe@gmail.com" }]
requires-python = ">=3.11"
keywords = ["ISBN", "ISBN-10", "ISBN-13", "SBN"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Indexing",
]

[project.urls]
"Changelog" = "https://github.com/JNRowe/pyisbn/blob/main/NEWS.rst"
"Contributors" = "https://github.com/JNRowe/pyisbn/contributors/"
"Documentation" = "https://pyisbn.readthedocs.io/"
"Git repository" = "https://github.com/JNRowe/pyisbn/"
"Issue tracker" = "https://github.com/JNRowe/pyisbn/issues/"
"Source code" = "https://github.com/JNRowe/pyisbn"

[tool.coverage.report]
fail_under = 100
precision = 2
show_missing = true

[tool.coverage.run]
branch = true
relative_files = true
source_pkgs = ["pyisbn"]

[tool.mutmut]
do_not_mutate = ["src/pyisbn/_version.py"]
pytest_add_cli_args = ["--cov-fail-under=0", "--randomly-seed=0"]
# Forcibly set pytest command, as the default behaves badly if you’re using
# environment isolation
runner = "pytest -x"

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-append",
    "--cov-context=test",
    "--durations=5",
    "--import-mode=importlib",
    "--no-cov-on-fail",
    "--pythonwarnings=error",
    "--strict-config",
    "--strict-markers",
]
minversion = "8.4"
testpaths = ["tests/"]
xfail_strict = true

[tool.ruff]
exclude = [".git/", "build/", "dist/", "maybe/"]
line-length = 80
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # mccabe
    "CPY", # flake8-copyright
    "D",   # pydocstyle
    "E",   # pycodestyle
    "N",   # pep8-naming
    "W",   # pycodestyle
    "YTT", # flake8-2020
]

[tool.ruff.lint.flake8-copyright]
min-file-size = 1
notice-rgx = "Copyright © 20\\d{2}(-20\\d{2})? {2}"

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
required-version = ">=0.9.0,<=0.10.0"

[tool.uv.build-backend]
source-include = [
    ".github/*.rst",
    "doc/**",
    "extra/_pyisbn",
    "extra/doap.rdf",
    "extra/tool.py",
    "tests/**",
    ".editorconfig",
    "NEWS.rst",
]
