[aliases]
build_dist = bdist_wheel sdist --formats=gztar,bztar,zip
build_sphinx_dev = build_sphinx --all-files --fresh-env --warning-is-error

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
omit =
    pyisbn/_version.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:
fail_under = 100
precision = 2
skip_covered = True

[flake8]
copyright-check = True
copyright-min-file-size = 1
copyright-regexp = Copyright © 20\d{2}(-20\d{2})? {2}
exclude = .git,build,maybe,pyisbn/_version.py
ignore = P101
max-complexity = 6
select = C,E,F,W,B,B901,B902,B903,B950

[metadata]
name = pyisbn
version = attr: pyisbn._version.dotted
author = James Rowe
author_email = jnrowe@gmail.com
description = A module for working with 10- and 13-digit ISBNs
long_description = file: README.rst
keywords = ISBN, ISBN-10, ISBN-13, SBN
license = GPL-3
url = https://github.com/JNRowe/pyisbn
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Other/Nonlisted Topic
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing
    Topic :: Text Processing :: Indexing
python_requires = >=3.6
project_urls =
    Contributors = https://github.com/JNRowe/pyisbn/contributors/
    Documentation = https://pyisbn.readthedocs.io/
    Git repository = https://github.com/JNRowe/pyisbn/
    Issue tracker = https://github.com/JNRowe/pyisbn/issues/
setup_requires = setuptools>=40.0.0

[options]
packages = pyisbn
zip_safe = True

[pycodestyle]
select = E, W

[pydocstyle]
select = D203,D212,D404

[tool:pytest]
addopts =
    --cov pyisbn --cov-report term-missing --no-cov-on-fail
    --durations=5
    --strict
minversion = 4.0
