[aliases]
build_dist = bdist_wheel sdist --formats=gztar,bztar,zip
build_sphinx_dev = build_sphinx --all-files --fresh-env --warning-is-error

[coverage:run]
branch = True
relative_files = True

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:
fail_under = 100
precision = 2
skip_covered = True

[metadata]
name = pyisbn
version = attr: pyisbn._version.dotted
author = James Rowe
author_email = jnrowe@gmail.com
description = A module for working with 10- and 13-digit ISBNs
long_description = file: README.rst
keywords = ISBN, ISBN-10, ISBN-13, SBN
license = GPL-3
url = https://github.com/JNRowe/pyisbn
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Other/Nonlisted Topic
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing
    Topic :: Text Processing :: Indexing
python_requires = >=3.6
project_urls =
    Contributors = https://github.com/JNRowe/pyisbn/contributors/
    Documentation = https://pyisbn.readthedocs.io/
    Git repository = https://github.com/JNRowe/pyisbn/
    Issue tracker = https://github.com/JNRowe/pyisbn/issues/
setup_requires = setuptools>=40.0.0

[mutmut]
# Forcibly set pytest command, as the default behaves badly if you’re using
# environment isolation
runner = pytest -x

[options]
packages = pyisbn
zip_safe = True

[tool:pytest]
addopts =
    --cov pyisbn --cov-report term-missing --no-cov-on-fail
    --durations=5
    --strict-markers
console_output_style = count
minversion = 6.2
